# AIVideoAnalyzer

./: .gitignore  .replit  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted--YouTube-AI--1738877499307.txt
components/: analysis_results.py  video_info.py
utils/: database.py  report_generator.py  storage.py  text_analysis.py  youtube_api.py
